--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,31 +1,30 @@
-body {
-    width: 390px;
-    height: 100dvh;
-    margin: auto;
-    background-color: #00AAFF;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  main {
-    flex-grow: 1;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
-  
-  :root {
-    /* spacing */
-    --gutter: 2rem;
-    --padding: 1.6rem;
-    --padding-sm: 1rem;
-  
-    /* fontsize */
-    --heading: 1.6rem;
-    --body: 1.4rem;
-  
-    /* color */
-    --blue: #1fa1ff;
-    --gray: #c4c4c4;
-  }
-  
+.container {
+  width: 390px;
+  height: 100dvh;
+  margin: auto;
+  background: #00AAFF;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+:root {
+  /* spacing */
+  --gutter: 2rem;
+  --padding: 1.6rem;
+  --padding-sm: 1rem;
+
+  /* fontsize */
+  --heading: 1.6rem;
+  --body: 1.4rem;
+
+  /* color */
+  --blue: #1fa1ff;
+  --gray: #c4c4c4;
+}
