--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -1,6 +1,7 @@
 header {
-    background-color: white;
     height: 5rem;
+    background-color: white;
+    z-index: 1000;
 }
 .logo {
     display: flex;
@@ -36,14 +37,14 @@ footer {
     margin: 0 1rem;
     font-size: 1.2rem;
 }
-.home-container {
+.home-container, .signup-container, .login-container {
     justify-content: center;
     align-items: center;
     color: #333;
     font-size: 1.6rem;
     line-height: 1.5;
     width: 390px;
-    height: 100dvh;
+    height: 87dvh;
     margin: auto;
     background: #00AAFF;
     display: flex;
@@ -56,7 +57,7 @@ footer {
 .menu {
     display: none;
     position: fixed;
-    top: 0;
+    top: 5rem;
     left: 0;
     width: 100%;
     height: 100%;
@@ -71,8 +72,8 @@ footer {
 }
 .menu a {
     display: block;
-    margin: 20px 0;
-    font-size: 24px;
+    margin: 100px 0;
+    font-size: 2rem;
     text-decoration: none;
     color: black;
 }
@@ -98,23 +99,24 @@ h1 {
     border-radius: 1rem;
     margin-top: 1rem;
 }
-.signup-container, .login-container {
+.signup_container, .login_container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: white;
     padding: 30px 40px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
-    height: 80dvh;
-    max-width: 265px;
+    max-width: 80%;
     text-align: center;
 }
-.signup_form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
+.signup_container {
+    height: 60rem;
+}
+.login_container {
+    height: 50rem;
 }
 
 .input-group {
@@ -136,9 +138,14 @@ h1 {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-} 
+}
+.form-control {
+    padding: 1rem;
+    border-radius: 1rem;
+}
 
 .login-btn, .signup-btn{
+    margin-top: 2rem;
     width: 60%;
     padding: 10px 15px;
     font-size: 16px;
@@ -149,7 +156,6 @@ h1 {
     cursor: pointer;
     transition: background-color 0.3s ease;
     }
-
 .login-btn:hover, .signup-btn:hover {
     background-color: #4BCFEA;
     }
