--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,15 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-<body>
-    <div class="signup-container">
+  <div class="signup-container">
+    <div class="signup_container">
       <h1>회원가입</h1>
       <form action="" method="POST" class="signup_form">
           {% csrf_token %}
           {{ form.as_p }}
-          <button type="submit" class="signup-btn">회원가입</button>
+          <div class="login_btn">
+            <button type="submit" class="signup-btn">회원가입</button>
+          </div>
       </form>
-      <p class="login-link">이미 계정이 있으신가요? <a href="{% url 'account_login' %}">로그인</a></p>
+      {% comment %}
+      <p class="login-link">이미 계정이 있으신가요? <a href="{% url 'user:login'%}">로그인</a></p>
+      {% endcomment %}
     </div>
-  </body>
+  </div>
+  <footer>
+    <div class="footer-top">
+        <a href="{% url 'demos:service' %}">서비스소개</a>
+        <a href="{% url 'demos:review' %}">리뷰</a>
+        <a href="{% url 'demos:community' %}">커뮤니티</a>
+        <a href="{% url 'demos:work' %}">협력문의</a>
+        </ul>
+    </div>
+    <div class="footer-bottom">
+        <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
+        <a href="{% url 'demos:email' %}"><i class="ri-mail-line"></i></a>
+        <a href="{% url 'demos:insta' %}"><i class="ri-instagram-line"></i></a>
+        <a href="{% url 'demos:facebook' %}"><i class="ri-facebook-circle-fill"></i></a>
+    </div>
+    </footer>
 {% endblock %}
