--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -1,21 +1,23 @@
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     height: 5rem;
     background-color: white;
+    padding: 0 1rem;
     z-index: 1000;
 }
 .logo {
     display: flex;
-    justify-content: left;
     align-items: center;
     height: 100%;
     margin-left: 1rem;
+    font-size: large;
 }
 .header-nav {
     display: flex;
-    justify-content: right;
     align-items: center;
     height: 100%;
-    margin-right: 1rem;
 }
 .header-nav a, i{
     margin: 0 1.3rem;
@@ -49,15 +51,14 @@ footer {
     background: #00AAFF;
     display: flex;
     flex-direction: column;
-    }
+}
 .menu-icon {
     cursor: pointer;
-    font-size: 24px;
 }
 .menu {
     display: none;
     position: fixed;
-    top: 5rem;
+    top: 49px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -105,7 +106,7 @@ h1 {
     justify-content: center;
     align-items: center;
     background-color: white;
-    padding: 30px 40px;
+    padding: 30px auto;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -142,8 +143,17 @@ h1 {
 .form-control {
     padding: 1rem;
     border-radius: 1rem;
+    margin: 1rem;
 }
-
+.login_elements p, .signup_form p {
+    margin: 1rem;
+}
+.login_elements p:last-of-type {
+    display: none;
+}
+.signup_form ul {
+    display: none;
+}
 .login-btn, .signup-btn{
     margin-top: 2rem;
     width: 60%;
@@ -159,18 +169,57 @@ h1 {
 .login-btn:hover, .signup-btn:hover {
     background-color: #4BCFEA;
     }
-
-.signup-link, .idpw-link, .login-link{
-    margin-top: 15px;
+.social-login {
+    margin-top: 10px;
+}
+.google, .naver, .kakao {
+    margin-top: 1rem;
+    padding: 1rem;
+    font-size: 12px;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
+    margin-inline: 0.5rem;
+}
+.google {
+    background-color:#fff;
+}
+.google:hover {
+    background-color: #F1F1F1;
+}
+.naver {
+    background-color: #1AC049;
+    color:white;
+}
+.naver:hover {
+    background-color: #16A344;
+}
+.kakao {
+    background-color: #FFEB00;
+}
+.kakao:hover {
+    background-color: #FDD835;
+}
+.login-add {
+    display:flex;
+    flex-direction: column;
+    margin: 1rem;
+    font-size: 13px;
+    color: #555;
+}
+.signup-link, .login-link{
+    padding: 3px;
     font-size: 14px;
     color: #555;
     }
 
-.idpw-link a, .login-link a{
+.login-link a{
     color: blueviolet;
     text-decoration: none;
     }
 
-.signup-link:hover , .idpw-link a:hover, .login-link a:hover {
+.signup-link a:hover, .login-link a:hover {
     text-decoration: underline;
     }
