--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,7 @@
   <body>
     <div class="container">
         <header>
-            {% comment %}<div class="logo">
-                <a href="{% url 'user:home' %}">
-                    <img src="{%static 'user/img/logo.png'%}" alt="logo">
-                </a>
-            </div>{% endcomment %}
+            <div class="logo"><a href="{% url 'demos:home' %}">jisungpark</a></div>
             <div class="header-nav">
                 {% if user.is_authenticated %}
                     <a>({{ user.username }})님</a>
