지도 + 로그인 병합 완료

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -36,7 +36,7 @@
   </div>
   <footer>
     <div class="footer-top">
-        <a href="{% url 'demos:service' %}">서비스소개</a>
+        <a href="{% url 'demos:introduce' %}">서비스소개</a>
         <a href="{% url 'demos:review' %}">리뷰</a>
         <a href="{% url 'demos:community' %}">커뮤니티</a>
         <a href="{% url 'demos:work' %}">협력문의</a>
