--- a/templates/home.html
+++ b/templates/home.html
@@ -8,14 +8,14 @@
             </form>
         </div>
         <button class="search-btn">
-            <a href="{% url 'demos:search' %}" class = 'btn btn-secondary'>주변 주차장 찾기</a>
+            <a href="{% url 'demos:map' %}" class = 'btn btn-secondary'>주변 주차장 찾기</a>
         </button>
     </div>
 
 
     <footer>
         <div class="footer-top">
-            <a href="{% url 'demos:service' %}">서비스소개</a>
+            <a href="{% url 'demos:introduce' %}">서비스소개</a>
             <a href="{% url 'demos:review' %}">리뷰</a>
             <a href="{% url 'demos:community' %}">커뮤니티</a>
             <a href="{% url 'demos:work' %}">협력문의</a>
