--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -1,56 +1,130 @@
-#map {
+.map_wrap, .map_wrap * {
+    margin:0;
+    padding:0;
+    font-size:12px;
+}
+.map_wrap {
+    position:relative;
+    width:100%;
+    height:100%;
+}
+.option{
     width: 100%;
-    height: 85%;
-    position: relative;
+    height: 5%;
+    padding:5px;
+    margin:10px 0 5px 10px;
     z-index: 1;
-    }
-.search-container {
-    position: absolute;
-    width: 100%;
-    height: 4%;
-    margin: 10px;
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    align-items: center;
-    z-index: 10;  
-    }
+}
+#keyword{
+    border: none;
+    width:70%;
+    height: 100%;
+    background-color: aliceblue;
+}
 .search-button{
-    background-color: white;
     border: none;
-    width: 7%;
+    width:5%;
     height: 100%;
+    background-color: aliceblue;
+}
+#map{
+    width:100%;
+    height:85%;
+    position:relative;
+    overflow:hidden; 
+    z-index: 1;
+}
+#menu_wrap {
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    width:250px;
+    height: 80%;
+    margin:10px 0 30px 10px;
+    padding:5px;
+    overflow-y:auto;
+    background:rgba(255, 255, 255, 0.7);
+    z-index: 1;
+    font-size:12px;border-radius: 10px;
+}
+.bg_white {
+    background:#fff;
+}
+#menu_wrap hr {
+    display: block; 
+    height: 1px;
+    border: 0; 
+    border-top: 2px solid #5F5F5F;
+    margin:3px 0;
+}
+#menu_wrap .option{
+    text-align: center;
+}
+#menu_wrap .option p {
+    margin:10px 0;
+}  
+#menu_wrap .option button {
+    margin-left:5px;
+}
+#placesList li {
+    list-style: none;
+}
+#placesList .item {
+    position:relative;
+    border-bottom:1px solid #888;
+    overflow: hidden;
     cursor: pointer;
+    min-height: 65px;
 }
-.search-button:hover{
-    background-color: rgb(243, 241, 241);
+#placesList .item span {
+    display: block;
+    margin-top:4px;
 }
-.address{
-    border: none;
-    width: 80%;
-    height: 100%;
+#placesList .item h5, #placesList .item .info {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
-.address:focus {
-    border: 2px solid #337eff;
-    outline: none;
+#placesList .item .info{
+    padding:10px 0 10px 55px;
 }
-.parking-list-container{
-    position: absolute;
-    bottom: 190px;
-    width: 100%;
-    height: 4%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;  
-    }
-.toggle-parking-btn{
-    background-color: white;
-    border: none;
-    width: 13%;
-    height: 100%;
-    cursor: pointer;
+#placesList .info .gray {
+    color:#8a8a8a;
 }
-.toggle-parking-btn:hover{
-    background-color: rgb(243, 241, 241);
+#placesList .item .markerbg {
+    float:left;
+    position:absolute;
+    width:36px; 
+    height:37px;
+    margin:10px 0 0 10px;
+    background:url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_number_blue.png) no-repeat;
 }
+#placesList .item .marker_1 {background-position: 0 -10px;}
+#placesList .item .marker_2 {background-position: 0 -56px;}
+#placesList .item .marker_3 {background-position: 0 -102px}
+#placesList .item .marker_4 {background-position: 0 -148px;}
+#placesList .item .marker_5 {background-position: 0 -194px;}
+#placesList .item .marker_6 {background-position: 0 -240px;}
+#placesList .item .marker_7 {background-position: 0 -286px;}
+#placesList .item .marker_8 {background-position: 0 -332px;}
+#placesList .item .marker_9 {background-position: 0 -378px;}
+#placesList .item .marker_10 {background-position: 0 -423px;}
+#placesList .item .marker_11 {background-position: 0 -470px;}
+#placesList .item .marker_12 {background-position: 0 -516px;}
+#placesList .item .marker_13 {background-position: 0 -562px;}
+#placesList .item .marker_14 {background-position: 0 -608px;}
+#placesList .item .marker_15 {background-position: 0 -654px;}
+#pagination {
+    margin:10px auto;
+    text-align: center;
+}
+#pagination a {
+    display:inline-block;
+    margin-right:10px;
+}
+#pagination .on {
+    font-weight: bold; 
+    cursor: default;color:#777;
+}
+
