--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,8 +5,8 @@
 {% block content %}
   <div class="login-container">
     <div class="login_container">
-        <h1>로그인</h1>
         <form action="" method="POST">
+            <h1>로그인</h1>
             {% csrf_token %}
             <div class="login_elements">
             {{ form.as_p }}
@@ -22,11 +22,7 @@
                 <p>소셜 로그인</p>
                 <button type="button" class="naver" onclick="location.href = '{% provider_login_url 'naver' %}'">NAVER</button>
                 <button type="button" class="google" onclick="location.href = '{% provider_login_url 'google' %}'">Google</button>
-                {% comment %}
-                <button class="google"><a href="{% url 'account_signup'%}"> 구글</a></button>
-                <button class="naver"><a href="{% url 'account_signup'%}"> 네이버</a></button>
-                <button class="kakao"><a href="{% url 'account_signup'%}"> 카카오</a></button>
-                {% endcomment %}
+                <button class="kakao"><a href="{% url 'account_signup'%}">kakao</a></button>
             </div>
         {% if invalid_creds %}
             <p>다시 시도해주세요</p>
@@ -36,7 +32,7 @@
   </div>
   <footer>
     <div class="footer-top">
-        <a href="{% url 'demos:service' %}">서비스소개</a>
+        <a href="{% url 'demos:introduce' %}">서비스소개</a>
         <a href="{% url 'demos:review' %}">리뷰</a>
         <a href="{% url 'demos:community' %}">커뮤니티</a>
         <a href="{% url 'demos:work' %}">협력문의</a>
