--- a/templates/base.html
+++ b/templates/base.html
@@ -30,13 +30,14 @@
         </header>
         <main>
             <div id="menu" class="menu">
-                <a href="demos:service">서비스 소개</a>
+                <a href="demos:introduce">서비스 소개</a>
                 <a href="demos:review">리뷰</a>
                 <a href="demos:community">커뮤니티</a>
                 <a href="demos:work">협력문의</a>
                 <a href="#">Q&A</a>
               </div>
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock %}
         </main>
     </div>
     <script>
