--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -6,7 +6,7 @@
 .map_wrap {
     position:relative;
     width:100%;
-    height:100%;
+    height:94%;
 }
 .option{
     width: 100%;
@@ -20,12 +20,48 @@
     width:70%;
     height: 100%;
     background-color: aliceblue;
+    border-radius: 4px;
 }
 .search-button{
     border: none;
-    width:5%;
+    width:10%;
     height: 100%;
+    background-color: #007bff;
+    cursor: pointer;
+    padding:5px;
+    border-radius: 4px;
+    color: white;
+    font-size: 1.2rem;
+}
+.list-button{
+    border: none;
+    width: 15%;
+    height: 100%;
+    background-color: #007bff;
+    cursor: pointer;
+    font-size: 1.2rem;
+    border-radius: 4px;
+    color: white;
+    padding: 5px;
+}
+.off-button{
+    margin-top: 2.5rem;
+    border: none;
     background-color: aliceblue;
+    cursor: pointer;
+    padding: 1rem;
+    border-radius: 4px;
+}
+.bottom-btn{
+    bottom: 55px;
+    z-index: 1;
+    display: flex;
+    position:relative;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:4%;
+    border-radius: 8px;
 }
 #map{
     width:100%;
@@ -50,6 +86,28 @@
 }
 .bg_white {
     background:#fff;
+}
+#parkingListWrap, #parkingDetailWrap{
+    position: relative;
+    z-index: 1;
+    bottom: 220px; 
+    background: white;
+    padding: 40px;
+    border-radius: 8px;
+    width: 50%;
+}
+#parkingListWrap ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+#parkingListWrap  li {
+    padding: 10px 0;
+    border-bottom: 1px solid #e0e0e0;
+    cursor: pointer;
+}
+#parkingDetailWrap{
+    z-index: 1;
 }
 #menu_wrap hr {
     display: block; 
@@ -127,4 +185,43 @@
     font-weight: bold; 
     cursor: default;color:#777;
 }
-
+.ri-arrow-down-s-fill {
+    font-size: 20px;
+    cursor: pointer;
+}
+.review, .community {
+    display: none;
+    margin-bottom: 20px;
+}
+.review.active , .community.active {
+    display: flex;
+    padding-block: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
+.review input,
+.review textarea, .community input{
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+.review input, .review textarea{
+    width: 60%;
+}
+.review-btn, .community-btn{
+    padding: 10px;
+    background: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.input-msg {
+    flex-direction: row;
+}
