[fix]map base연결 및 home 검색창 map에 연결

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
           menu.classList.toggle('active');
         }
       </script>
+      {% block scripts %}{% endblock %}
   </body>
 </html>
 
