--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -1,7 +1,7 @@
 .map_wrap, .map_wrap * {
     margin:0;
     padding:0;
-    font-size:12px;
+    font-size:10px;
 }
 .map_wrap {
     position:relative;
@@ -35,7 +35,7 @@
 }
 .list-button{
     border: none;
-    width: 15%;
+    width: 20%;
     height: 100%;
     background-color: #007bff;
     cursor: pointer;
@@ -65,7 +65,7 @@
 }
 #map{
     width:100%;
-    height:85%;
+    height:100%;
     position:relative;
     overflow:hidden; 
     z-index: 1;
@@ -75,14 +75,15 @@
     top:0;
     left:0;
     bottom:0;
-    width:250px;
+    width:210px;
     height: 80%;
     margin:10px 0 30px 10px;
     padding:5px;
     overflow-y:auto;
     background:rgba(255, 255, 255, 0.7);
     z-index: 1;
-    font-size:12px;border-radius: 10px;
+    font-size:10px;
+    border-radius: 10px;
 }
 .bg_white {
     background:#fff;
