--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 {% load static %}
 {% block styles %}
 <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
@@ -64,7 +65,10 @@
         {% if parking_data %}
         {{ parking_data | json_script:'jsonData' }}
         {% endif %}
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=&libraries=services"></script>
+        <script>
+            document.getElementById('keyword').value = localStorage.getItem('search_txt') || '';
+        </script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7f990c514b989ac63728873819748d10&libraries=services"></script>
         <script>
             var markers = [];
             var parkingData = [];
