--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -1,7 +1,7 @@
 .map_wrap, .map_wrap * {
     margin:0;
     padding:0;
-    font-size:10px;
+    font-size: 1.1rem;x;
 }
 .map_wrap {
     position:relative;
@@ -75,9 +75,9 @@
     top:0;
     left:0;
     bottom:0;
-    width:210px;
-    height: 80%;
-    margin:10px 0 30px 10px;
+    width:95%;
+    height: 43%;
+    margin:10px 10px 30px 10px;
     padding:5px;
     overflow-y:auto;
     background:rgba(255, 255, 255, 0.7);
