--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -1,7 +1,7 @@
 .map_wrap, .map_wrap * {
     margin:0;
     padding:0;
-    font-size: 1.3rem;x;
+    font-size: 1.3rem;
 }
 .map_wrap {
     position:relative;
@@ -21,6 +21,7 @@
     height: 100%;
     background-color: aliceblue;
     border-radius: 4px;
+    padding: 5px;
 }
 .search-button{
     border: none;
@@ -200,7 +201,7 @@
 }
 .review.active , .community.active {
     display: flex;
-    margin-bottom: 20px;
+    margin-block: 20px;
     font-size: 15px;
     padding-block: 30px;
     flex-direction: column;
@@ -231,4 +232,13 @@
 }
 .input-msg {
     flex-direction: row;
+}
+.review-item {
+
+    box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-block: 20px;
+}
+.review-item p {
+    margin-top: 10px;
 }
